first complete pre release